Fixed tweak identifier and title

--- a/control
+++ b/control
@@ -1,5 +1,5 @@
-Package: com.noahsaso.groupindicator
-Name: GroupIndicator
+Package: com.noahsaso.groupindicators
+Name: GroupIndicators
 Depends: mobilesubstrate
 Version: 0.0.1
 Architecture: iphoneos-arm
@@ -7,4 +7,4 @@ Description: Small indicator on group conversations
 Maintainer: Noah Saso <noahsaso@gmail.com>
 Author: Noah Saso <noahsaso@gmail.com>
 Section: Tweaks
-Depiction: http://repo.noahsaso.com/deps.php?pkg=com.noahsaso.groupindicator
+Depiction: http://repo.noahsaso.com/deps.php?pkg=com.noahsaso.groupindicators
